...
      headerImage={
        <Image
          source={require("@/assets/fondo.png")}
          resizeMode="contain"
        />
      }
      headerTitle="Card Details"
    >
      <ThemedView>
        <FullCard card={cardId} />
      </ThemedView>
    </ParallaxScrollView>
  );
...
