...
  return (
    <View>
      <ThemedView style={{ marginBottom: theme.padding.large * -1 }}>
        <ThemedTextInput
          value={cardName}
          onChange={setCardName}
          placeholder="Card name"
          style={{ marginBottom: theme.padding.large, marginTop: theme.padding.medium }}
        />
        <View style={styles.buttonRow}>
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={cardSupertype.length > 0 || cardSubtypes.length > 0 || cardTypes.length > 0 ? "active" : "default"}
            title="Card Type"
            onPress={() => setCardTypeModalVisible(true)}
            style={styles.halfButton}
            color={
              cardSupertype.length > 0 || cardSubtypes.length > 0 || cardTypes.length > 0
                ? theme.colors.green
                : undefined
...
          />
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={cardRules ? "active" : "default"}
            title="Rules"
            onPress={() => setRulesModalVisible(true)}
            style={styles.halfButton}
            color={cardRules ? theme.colors.green : undefined}
          />
        </View>
        <View style={styles.buttonRow}>
...
              attacksCost.length > 0 ||
              attacksConvertedEnergyCost !== "" ||
              (attacksCostSlots && attacksCostSlots.some((v) => v))
                ? "active"
                : "default"
            }
            title="Attacks"
            onPress={() => setAttacksModalVisible(true)}
            style={styles.halfButton}
            color={
              attacksName ||
              attacksDamage !== "" ||
              attacksText ||
...
          />
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={abilitiesName || abilitiesText || hasAnyAbility ? "active" : "default"}
            title="Abilities"
            onPress={() => setAbilitiesModalVisible(true)}
            style={styles.halfButton}
            color={abilitiesName || abilitiesText || hasAnyAbility ? theme.colors.green : undefined}
          />
        </View>
        <View style={styles.buttonRow}>
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={cardHp !== "" || cardConvertedRetreatCost !== "" ? "active" : "default"}
            title="Stats"
            onPress={() => setStatsModalVisible(true)}
            style={styles.halfButton}
            color={cardHp !== "" || cardConvertedRetreatCost !== "" ? theme.colors.green : undefined}
          />
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={cardStage.length > 0 || cardEvolvesFrom || cardEvolvesTo ? "active" : "default"}
            title="Evolution"
            onPress={() => setEvolutionModalVisible(true)}
            style={styles.halfButton}
            color={cardStage.length > 0 || cardEvolvesFrom || cardEvolvesTo ? theme.colors.green : undefined}
          />
        </View>
        <View style={styles.buttonRow}>
          <ThemedButton
            type="outline"
            size="small"
            disabled={false}
            status={cardWeaknessesType.length > 0 || cardResistancesType.length > 0 ? "active" : "default"}
            title="Weak/Res"
            onPress={() => setWeakResModalVisible(true)}
            style={styles.halfButton}
            color={cardWeaknessesType.length > 0 || cardResistancesType.length > 0 ? theme.colors.green : undefined}
          />
          <ThemedButton
            type="outline"
...
            disabled={false}
            status={
              cardRegulationMark.length > 0 || cardSetName.length > 0 || cardNumber !== "" || cardSetNumber
                ? "active"
                : "default"
            }
            title="Edition"
            onPress={() => setEditionModalVisible(true)}
            style={styles.halfButton}
            color={
              cardRegulationMark.length > 0 || cardSetName.length > 0 || cardNumber !== "" || cardSetNumber
                ? theme.colors.green
                : undefined
            }
          />
        </View>
        <ThemedSwitch
          value={removeDuplicates}
          label="Hide duplicates"
          onValueChange={onRemoveDuplicatesChange}
          style={styles.switchContainer}
        />
      </ThemedView>
      <ThemedView
        layout="rounded"
        style={{ position: "relative", zIndex: 2 }}
      >
        <ThemedButton
          title="Reset"
          size="small"
          width={summaryFields.filter((f: { value: any }) => f.value && f.value !== "").length > 0 ? vw(28) : vw(32)}
          type="alternative"
          onPress={handleReset}
          style={{ marginLeft: theme.padding.medium }}
        />
        <ThemedButton
          title={"Search"}
          type="main"
          width={vw(42)}
          size="large"
          onPress={handleSubmit}
          status={!isAnyFilterSet || loading ? "disabled" : "default"}
          disabled={!isAnyFilterSet || loading}
...
            style={styles.summaryContainer}
          >
            <ThemedText
              type="h4"
              style={styles.summaryTitle}
            >
              You are searching for
            </ThemedText>
            <View>
              {summaryFields
                .filter((f) => f.value && f.value !== "")
                .map((f) => {
                  let valueStr = typeof f.value === "string" ? f.value.trim() : null;
...
