...
      onCancel={handleCancel}
    >
      <ThemedText
        type="h3"
        style={{ width: "100%", paddingBottom: theme.padding.medium }}
      >
        Rules/Rule Box
      </ThemedText>
      <ThemedTextInput
        value={cardRules}
        labelHint="Search for card TextEffect in Trainer cards and Rule Box in Pokèmon cards"
        onChange={setCardRules}
        placeholder="Rule/Rule Box"
...
