...
      onCancel={handleCancel}
    >
      <ThemedText
        type="h3"
        style={{ width: "100%", paddingBottom: theme.padding.medium }}
      >
        Weaknesses & Resistances
      </ThemedText>
      <ThemedMultiSelect
        label="Weaknesses Type"
        value={cardWeaknessesType}
        options={cardWeaknessesTypeOptions}
        onChange={setCardWeaknessesType}
...
