...
  );

  return (
    <AutocompleteDropdownContextProvider>
      <MainScrollView
        headerImage="advanced-search-bkg"
        headerTitle="Advanced Search"
        scrollRef={scrollRef}
      >
        <View style={{ paddingBottom: theme.padding.large }}>
          <AdvancedSearchForm
            onSearchResults={handleSearchResults}
            setLoading={setLoading}
...
          contentStyle={{ width: "85%" }}
        >
          <ThemedText
            type="h4"
            style={{ paddingTop: theme.padding.small, paddingBottom: theme.padding.small }}
          >
            No cards found
          </ThemedText>
        </ThemedModal>
      </MainScrollView>
    </AutocompleteDropdownContextProvider>
  );
}
...
